<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SafeWalk</string>
    <string name="server">Server</string>
    <string name="client">Client</string>
    <string name="submit">Submit</string>
    <string name="match">Match</string>
    <string name="start_over">Start Over</string>
    <string name="default_host">10.0.2.2</string>
    <string name="default_port">8888</string>
    <string name="default_command">:FAKE_COMMAND</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="name">Name:</string>
    <string name="preferences">Preferences</string>
    <string name="preferenceRequester">I am a requester. Match me with volunteers only.</string>
    <string name="preferenceVolunteer">I am a volunteer. Dont match me with an other volunteer.</string>
    <string name="preferenceNoPreference">I have no preference being a requester or a volunteer</string>
    <string name="from">From</string>
    <string name="to">To</string>
    
    <string-array name="from_array">
        <item>EE - Electrical Engineering</item>
        <item>CL50 - Class of 1950</item>
        <item>LWSN - Lawson</item>
        <item>PMU - Purdue Memorial Union</item>
        <item>PUSH - Purdue University Student Health</item>
    </string-array>
    <string-array name="to_array">
    	<item>EE - Electrical Engineering</item>
        <item>CL50 - Class of 1950</item>
        <item>LWSN - Lawson</item>
        <item>PMU - Purdue Memorial Union</item>
        <item>PUSH - Purdue University Student Health</item>
        <item>* - any listed location</item>
    </string-array>
</resources>