<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.purdue.bbemismarsh27.MainActivity" >

    <!-- TODO your layout here -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="15dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginRight="15dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="13dp" >

                <requestFocus
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </EditText>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/preferences"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="15dp" />

        <RadioGroup
            android:id="@+id/rg_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/rb_requester"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="13dp"
                android:text="@string/preferenceRequester"
                android:textSize="13dp" />

            <RadioButton
                android:id="@+id/rb_volunteer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="13dp"
                android:paddingTop="10dp"
                android:text="@string/preferenceVolunteer"
                android:textSize="13dp" />

            <RadioButton
                android:id="@+id/rb_noPreference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="13dp"
                android:paddingTop="10dp"
                android:text="@string/preferenceNoPreference"
                android:textSize="13dp" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/from"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="15dp" />

        <Spinner
            android:id="@+id/spin_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/to"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="15dp" />

        <Spinner
            android:id="@+id/spin_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/bu_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_bigline"
            android:enabled="true"
            android:gravity="center_horizontal"
            android:minHeight="60dp"
            android:minWidth="100dp"
            android:onClick="onSubmit"
            android:padding="@dimen/padding"
            android:text="@string/submit" />
    </LinearLayout>

</RelativeLayout>